--- a/practise/index.html
+++ b/practise/index.html
@@ -9,7 +9,111 @@
 </head>
 <body>
 	<div class="header">
-		
+		<div class="head_middle">
+			<img src="" alt="">
+			<div class="head_search">
+				<input type="text">
+				<div class="head_sear_logo"></div>
+			</div>
+		</div>
+		<div class="head_nav">
+			<div class="head_nav_middle">
+				<span>主办单位：浙江油气公司党委</span>
+				<span>2017年2月7日</span>
+				<span>上一期</span>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		<div class="content_middle">
+			<div class="content_m_left">
+				<div class="content_newspaper"></div>
+				<div class="content_paperbutton">
+					<span>上一版</span>
+					<span>下一版</span>
+					<span>内容下载</span>
+				</div>
+			</div>
+			<div class="content_m_middle">
+				<div class="content_m_mtop">
+					<div class="content_m_mtop_head">
+						<span>第六版</span>
+						<span>版面主体</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+				<div class="content_m_mbottom">
+					<div class="content_m_mtop_head">
+						<span>今日关注</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="content_m_right">
+				<div class="content_righttop">
+					<span>></span>
+					<div class="content_rightdate">
+						<span>2016年</span>
+						<select name="" id="">
+							<option value="">1</option>
+							<option value="">2</option>
+							<option value="">3</option>
+							<option value="">4</option>
+							<option value="">5</option>
+							<option value="">6</option>
+							<option value="">7</option>
+							<option value="">8</option>
+							<option value="">9</option>
+							<option value="">10</option>
+							<option value="">11</option>
+							<option value="">12</option>
+						</select>
+					</div>
+					<span>></span>
+				</div>
+				<div class="content_rightbottom">
+					<div class="content_m_mtop_head">
+						<span>版面目录</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+			</div>
+			<span>关于我们|投稿方式|版权声明</span>
+			<span>主办单位：浙江油气公司党委</span>
+		</div>
+	</div>
+	<div class="footer">
+		<span>版权声明：刊发的所有作品，版权均属于浙江油田公司党委。未经书面授权，任何单位及个人不得将刊发的内容用于商业用。如进行转载、摘编，必须在书面授权范围内使用。</span>
 	</div>
 </body>
 </html>
