--- a/practise/index.html
+++ b/practise/index.html
@@ -3,13 +3,157 @@
 <head>
 	<meta charset="UTF-8">
 	<title>浙江油田报</title>
+	<link rel="stylesheet" href="http://at.alicdn.com/t/font_jbfgjiq4zt2tvs4i.css">
 	<style>
 		
+		*{padding: 0;margin: 0;}
+		li{list-style: none;}
+		.header{width:100%;height: 112px;}
+		.header .head_middle{width: 1200px;padding: 0 100px;height: 100%;margin: 0 auto;box-sizing: border-box;}
+		.header .head_middle img{float: left;margin-top: 14px;}
+		.header .head_middle .head_search{width: 310px;height: 44px;float: right;margin-right: 20px;margin-top: 50px;}
+		.header .head_middle .head_search input{width: 255px;height: 100%;float: left;}
+		.header .head_middle .head_search .head_sear_logo{width: 51px;height: 100%;background: green;float: left;}
+		.header .head_nav{width: 100%;height: 44px;background: #1477ca;}
+		.header .head_nav .head_nav_middle{width: 1200px;height: 100%;margin: 0 auto;padding: 0 100px;box-sizing: border-box;}
+		.header .head_nav .head_nav_middle span{font-size: 17px;color: white;font-weight: bold;}
+		.header .head_nav .head_nav_middle .text1{margin-left: 30px;line-height: 44px;}
+		.header .head_nav .head_nav_middle .text2{margin-left: 200px;line-height: 44px;margin-right: 265px;font-weight: normal;}
+
+		.content{width: 100%;height: 702px;margin-top: 44px;}
+		.content .content_middle{width: 1200px;padding: 0 100px;margin: 0 auto;box-sizing: border-box;height: 100%;}
+		.content .content_middle .content_m_left{width: 430px;height: 100%;padding: 1px;float: left;}
+		.content .content_middle .content_m_left .content_newspaper{width: 100%;height: 610px;box-shadow: 12px 0 22px 2px rgba(7,0,2,.31);margin-top: 16px;padding: 1px;background: white;}
+		.content .content_middle .content_m_left .content_newspaper img{display: block;margin: 0 auto;margin-top: 34px;}
+		.content .content_middle .content_m_left .content_paperbutton{width: 100%;height: 50px;background: #226cab;margin-top: 21px;position: relative;padding: 1px;}
+		.content .content_middle .content_m_left .content_paperbutton span{line-height: 50px;color: white;}
+		.content .content_middle .content_m_left .content_paperbutton .text3{margin-left: 32px;margin-right: 44px;}
+		.content .content_middle .content_m_left .content_paperbutton .text4{position: absolute;right: 5px;bottom: 5px;line-height: 16px;font-size: 16px;font-family: "宋体";}
+
+		.content .content_middle .content_m_middle{width: 323px;height:702px;/*background: red;*/float: left;margin-left: 25px;}
+		.content .content_middle .content_m_middle .content_m_mtop{position: relative;overflow: hidden; width: 323px;height: 317px;background:url(./img/u_practise_08.png) no-repeat bottom right;margin-top: 16px;border-radius: 10px;box-shadow: 10px 0 43px rgba(105,102,102,.53);}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head{height: 40px;width: 100%;background: #226cab;overflow: hidden;position: relative;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle{width: 90px;height: 20px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top: 5px;margin-left: 5px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .iconfont{color: #226cab;font-size: 18px;line-height: 21px;font-weight: bolder;margin-left: 10px;float: left}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text5{font-size: 15px;font-weight: bold;line-height: 19px;color: #226cab;float: left;margin-left: 5px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .text6{font-size: 15px;font-weight: bold;color: white;position: absolute;top: 5px;right: 10px;}
+		.content .content_middle .content_m_middle .content_m_mtop ul{display: block;height: 295px;width: 100%;background: white;border-radius: 10px;position: absolute;top: 24px;}
+	
+	
 	</style>
 </head>
 <body>
 	<div class="header">
-		
+		<div class="head_middle">
+			<img src="./img/practise_03.png" alt="">
+			<div class="head_search">
+				<input type="text">
+				<div class="head_sear_logo"></div>
+			</div>
+		</div>
+		<div class="head_nav">
+			<div class="head_nav_middle">
+				<span class="text1">主办单位：浙江油气公司党委</span>
+				<span class="text2">2017年2月7日    星期一</span>
+				<span>上一期</span>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		<div class="content_middle">
+			<div class="content_m_left">
+				<div class="content_newspaper">
+					<img src="./img/practise_07.png" alt="">
+				</div>
+				<div class="content_paperbutton">
+					<span class="text3">上一版</span>
+					<span>下一版</span>
+					<span class="text4">内容下载</span>
+				</div>
+			</div>
+			<div class="content_m_middle">
+				<div class="content_m_mtop">
+					<div class="content_m_mtop_head">
+						<div class="content_m_mtop_mtitle">
+							<span class="iconfont">&#xe60f;</span>
+							<span class="text5">第6版</span>
+						</div>
+						<span class="text6">版面主体</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+				<div class="content_m_mbottom">
+					<div class="content_m_mtop_head">
+						<span>今日关注</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="content_m_right">
+				<div class="content_righttop">
+					<span>></span>
+					<div class="content_rightdate">
+						<span>2016年</span>
+						<select name="" id="">
+							<option value="">1</option>
+							<option value="">2</option>
+							<option value="">3</option>
+							<option value="">4</option>
+							<option value="">5</option>
+							<option value="">6</option>
+							<option value="">7</option>
+							<option value="">8</option>
+							<option value="">9</option>
+							<option value="">10</option>
+							<option value="">11</option>
+							<option value="">12</option>
+						</select>
+					</div>
+					<span>></span>
+				</div>
+				<div class="content_rightbottom">
+					<div class="content_m_mtop_head">
+						<span>版面目录</span>
+					</div>
+					<ul>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+					</ul>
+				</div>
+			</div>
+			<span>关于我们|投稿方式|版权声明</span>
+			<span>主办单位：浙江油气公司党委</span>
+		</div>
+	</div>
+	<div class="footer">
+		<span>版权声明：刊发的所有作品，版权均属于浙江油田公司党委。未经书面授权，任何单位及个人不得将刊发的内容用于商业用。如进行转载、摘编，必须在书面授权范围内使用。</span>
 	</div>
 </body>
 </html>
