--- a/practise/index.html
+++ b/practise/index.html
@@ -31,13 +31,15 @@
 		.content .content_middle .content_m_left .content_paperbutton .text4{position: absolute;right: 5px;bottom: 5px;line-height: 16px;font-size: 16px;font-family: "宋体";}
 
 		.content .content_middle .content_m_middle{width: 323px;height:702px;/*background: red;*/float: left;margin-left: 25px;}
-		.content .content_middle .content_m_middle .content_m_mtop{position: relative;overflow: hidden; width: 323px;height: 317px;background:url(./img/u_practise_08.png) no-repeat bottom right;margin-top: 16px;border-radius: 10px;box-shadow: 10px 0 43px rgba(105,102,102,.53);}
+		.content .content_middle .content_m_middle .content_m_mtop{position: relative;overflow: hidden; width: 323px;height: 317px;margin-top: 16px;border-radius: 10px;box-shadow: 10px 0 43px rgba(105,102,102,.53);}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head{height: 40px;width: 100%;background: #226cab;overflow: hidden;position: relative;}
-		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle{width: 90px;height: 20px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top: 5px;margin-left: 5px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle{width: 105px;height: 20px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top: 5px;margin-left: 5px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .iconfont{color: #226cab;font-size: 18px;line-height: 21px;font-weight: bolder;margin-left: 10px;float: left}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text5{font-size: 15px;font-weight: bold;line-height: 19px;color: #226cab;float: left;margin-left: 5px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text{margin-left: 15px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .text6{font-size: 15px;font-weight: bold;color: white;position: absolute;top: 5px;right: 10px;}
-		.content .content_middle .content_m_middle .content_m_mtop ul{display: block;height: 295px;width: 100%;background: white;border-radius: 10px;position: absolute;top: 24px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg{width: 100%;height: 295px;background: white;border-radius: 10px;position: absolute;top: 24px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul{display: block;height: 295px;width: 100%;border-radius: 10px;background:url(./img/u_practise_08.png) no-repeat bottom right;}
 	
 	
 	</style>
@@ -56,8 +58,6 @@
 			<div class="head_nav_middle">
 				<span class="text1">主办单位：浙江油气公司党委</span>
 				<span class="text2">2017年2月7日    星期一</span>
-				<span>主办单位：浙江油气公司党委</span>
-				<span>2017年2月7日</span>
 				<span>上一期</span>
 			</div>
 		</div>
@@ -72,11 +72,6 @@
 					<span class="text3">上一版</span>
 					<span>下一版</span>
 					<span class="text4">内容下载</span>
-				<div class="content_newspaper"></div>
-				<div class="content_paperbutton">
-					<span>上一版</span>
-					<span>下一版</span>
-					<span>内容下载</span>
 				</div>
 			</div>
 			<div class="content_m_middle">
@@ -84,12 +79,11 @@
 					<div class="content_m_mtop_head">
 						<div class="content_m_mtop_mtitle">
 							<span class="iconfont">&#xe60f;</span>
-							<span class="text5">第6版</span>
+							<span class="text5 text">第6版</span>
 						</div>
 						<span class="text6">版面主体</span>
-						<span>第六版</span>
-						<span>版面主体</span>
 					</div>
+					<div class="content_m_mtopimg">
 					<ul>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
@@ -100,12 +94,16 @@
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-					</ul>
+					</ul></div>
 				</div>
-				<div class="content_m_mbottom">
+				<div class="content_m_mtop">
 					<div class="content_m_mtop_head">
-						<span>今日关注</span>
+						<div class="content_m_mtop_mtitle">
+						<span class="iconfont">&#xe60f;</span>
+						<span class="text5">今日关注</span>
+						</div>
 					</div>
+					<div class="content_m_mtopimg">
 					<ul>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
@@ -117,6 +115,7 @@
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
 					</ul>
+					</div>
 				</div>
 			</div>
 			<div class="content_m_right">
