--- a/practise/index.html
+++ b/practise/index.html
@@ -20,27 +20,29 @@
 		.header .head_nav .head_nav_middle .text1{margin-left: 30px;line-height: 44px;}
 		.header .head_nav .head_nav_middle .text2{margin-left: 200px;line-height: 44px;margin-right: 265px;font-weight: normal;}
 
-		.content{width: 100%;height: 702px;margin-top: 44px;}
+		.content{width: 100%;height: 680px;margin-top: 44px;}
 		.content .content_middle{width: 1200px;padding: 0 100px;margin: 0 auto;box-sizing: border-box;height: 100%;}
 		.content .content_middle .content_m_left{width: 430px;height: 100%;padding: 1px;float: left;}
-		.content .content_middle .content_m_left .content_newspaper{width: 100%;height: 610px;box-shadow: 12px 0 22px 2px rgba(7,0,2,.31);margin-top: 16px;padding: 1px;background: white;}
+		.content .content_middle .content_m_left .content_newspaper{width: 100%;height: 590px;box-shadow: 12px 0 22px 2px rgba(7,0,2,.31);margin-top: 16px;padding: 1px;background: white;}
 		.content .content_middle .content_m_left .content_newspaper img{display: block;margin: 0 auto;margin-top: 34px;}
-		.content .content_middle .content_m_left .content_paperbutton{width: 100%;height: 50px;background: #226cab;margin-top: 21px;position: relative;padding: 1px;}
+		.content .content_middle .content_m_left .content_paperbutton{width: 100%;height: 50px;background: #226cab;margin-top: 21px;position: relative;}
 		.content .content_middle .content_m_left .content_paperbutton span{line-height: 50px;color: white;}
 		.content .content_middle .content_m_left .content_paperbutton .text3{margin-left: 32px;margin-right: 44px;}
 		.content .content_middle .content_m_left .content_paperbutton .text4{position: absolute;right: 5px;bottom: 5px;line-height: 16px;font-size: 16px;font-family: "宋体";}
 
 		.content .content_middle .content_m_middle{width: 323px;height:702px;/*background: red;*/float: left;margin-left: 25px;}
-		.content .content_middle .content_m_middle .content_m_mtop{position: relative;overflow: hidden; width: 323px;height: 317px;margin-top: 16px;border-radius: 10px;box-shadow: 10px 0 43px rgba(105,102,102,.53);}
+		.content .content_middle .content_m_middle .content_m_mtop{position: relative;overflow: hidden; width: 323px;height: 323px;margin-top: 16px;border-radius: 10px;box-shadow: 10px 0 43px rgba(105,102,102,.53);}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head{height: 40px;width: 100%;background: #226cab;overflow: hidden;position: relative;}
-		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle{width: 105px;height: 20px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top: 5px;margin-left: 5px;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle{width: 105px;height: 20px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top: 5px;margin-left: 7px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .iconfont{color: #226cab;font-size: 18px;line-height: 21px;font-weight: bolder;margin-left: 10px;float: left}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text5{font-size: 15px;font-weight: bold;line-height: 19px;color: #226cab;float: left;margin-left: 5px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text{margin-left: 15px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .text6{font-size: 15px;font-weight: bold;color: white;position: absolute;top: 5px;right: 10px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg{width: 100%;height: 295px;background: white;border-radius: 10px;position: absolute;top: 24px;}
-		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul{display: block;height: 295px;width: 100%;border-radius: 10px;background:url(./img/u_practise_08.png) no-repeat bottom right;}
-	
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul{display: block;height: 299px;width: 100%;border-radius: 10px;background:url(./img/u_practise_08.png) no-repeat bottom right;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li{margin-left: 56px;font-size: 14px;line-height: 22px;color: black;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li a{color: black;text-decoration: none;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li:before{content: " ";display: block;height: 10px;width: 10px;border-radius: 50%;background: #226cab;position: relative;top: 16px;right: 28px;}
 	
 	</style>
 </head>
