--- a/practise/index.html
+++ b/practise/index.html
@@ -5,9 +5,13 @@
 	<title>浙江油田报</title>
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_jbfgjiq4zt2tvs4i.css">
 	<style>
-		
+		@font-face{
+			font-family: RTWSBanHei;
+			src: url('./font/RTWSBanHeiG0v1-Regular.ttf');
+		}
 		*{padding: 0;margin: 0;}
 		li{list-style: none;}
+		a{text-decoration: none;}
 		.header{width:100%;height: 112px;}
 		.header .head_middle{width: 1200px;padding: 0 100px;height: 100%;margin: 0 auto;box-sizing: border-box;}
 		.header .head_middle img{float: left;margin-top: 14px;}
@@ -39,11 +43,34 @@
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .content_m_mtop_mtitle .text{margin-left: 15px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtop_head .text6{font-size: 15px;font-weight: bold;color: white;position: absolute;top: 5px;right: 10px;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg{width: 100%;height: 295px;background: white;border-radius: 10px;position: absolute;top: 24px;}
-		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul{display: block;height: 299px;width: 100%;border-radius: 10px;background:url(./img/u_practise_08.png) no-repeat bottom right;}
+		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul{display: block;height: 299px;width: 100%;border-radius: 10px;background:url(./img/practise_08.png) no-repeat bottom right;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li{margin-left: 56px;font-size: 14px;line-height: 22px;color: black;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li a{color: black;text-decoration: none;}
 		.content .content_middle .content_m_middle .content_m_mtop .content_m_mtopimg ul li:before{content: " ";display: block;height: 10px;width: 10px;border-radius: 50%;background: #226cab;position: relative;top: 16px;right: 28px;}
-	
+		.content .content_middle .content_m_right{width: 189px;height: 100%;float: right;}
+
+		.content .content_middle .content_m_right .content_righttop{width: 187px;height: 140px;background: white;margin-top: 16px;border: solid 1px #a3a3a3;box-shadow: 1px 0 20px rgba(0,0,0,.3);}
+		.content .content_middle .content_m_right .content_righttop .btn{width: 32px;height: 100%;background: #6d929b;text-align: center;cursor: pointer;}
+		.content .content_middle .content_m_right .content_righttop .btn .iconfont{color: white;font-size: 30px;margin-top: 56px;display: block;}
+		.content .content_middle .content_m_right .content_righttop .btnleft{float: left;}
+		.content .content_middle .content_m_right .content_righttop .btnright{float: right;}
+		.content .content_middle .content_m_right .content_righttop .content_rightdate{float: left;width: 123px;}
+		.content .content_middle .content_m_right .content_righttop .content_rightdate .text6,option{font-family: "RTWSBanHei";color: #6d929b;font-size: 25px;}
+		.content .content_middle .content_m_right .content_righttop .content_rightdate .text6{display: block;height: auto;margin-left: 16px;margin-top: 25px;}
+		.content .content_middle .content_m_right .content_righttop .content_rightdate select{width: 100px;height: 42px;margin-left: 10px;}
+
+		.content .content_middle .content_m_right .content_rightbottom{width: 100%;height: 500px;border-radius: 10px;box-shadow:  10px 0 43px rgba(105,102,102,.53);margin-top: 22px;}
+		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head{height: 35px;width: 100%;background: #226cab;border-radius: 10px 10px 0px 0px/10px 10px 0px 0px;overflow: hidden;}
+		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_img{background: white;width: 100%;height: 476px;position: relative;top: -11px;display: block;border-radius: 10px;}
+		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head .content_m_mright_mtitle{height: 20px;width: 105px;background: white;border-radius: 10px 10px 0px 0px/10px 10px 0px 0px;margin-top:5px;margin-left: 7px;}
+		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head .content_m_mright_mtitle .text7{font-size: 15px;font-weight: bold;color: #226cab;margin-left: 23px;}
+		.content .content_middle .content_m_right .content_rightbottom ul{width: 100%;height: 476px;background: url(./img/practise_09.png) no-repeat bottom right;border-radius: 10px;}
+		.content .content_middle .content_m_right .content_rightbottom ul li:after{content: " ";display: block;width: 158px;height: 6px;background: #b2b2b2;position: relative;top: 0px;right: 0px;}
+		.content .content_middle .content_m_right .content_rightbottom ul li{margin-left: 16px;line-height: 23px;}
+		.content .content_middle .content_m_right .content_rightbottom ul li a{color: black;font-size: 14px;}
+		.content .content_middle .content_m_right .content_rightbottom ul li a .text8{font-size: 14px;text-decoration: underline;color: black;}
+		.content .content_middle .content_m_right .content_rightbottom ul li a .text9{font-size: 25px;color: black;}
+		.content .content_middle .content_m_right .content_rightbottom ul li a .text10{font-size: 23px;color: black;}
 	</style>
 </head>
 <body>
@@ -122,10 +149,10 @@
 			</div>
 			<div class="content_m_right">
 				<div class="content_righttop">
-					<span>></span>
+					<div class="btnleft btn"><i class="iconfont">&#xe602;</i></div>
 					<div class="content_rightdate">
-						<span>2016年</span>
-						<select name="" id="">
+						<span class="text6">2016年<br></span>
+						<select name="" id="date">
 							<option value="">1</option>
 							<option value="">2</option>
 							<option value="">3</option>
@@ -140,23 +167,26 @@
 							<option value="">12</option>
 						</select>
 					</div>
-					<span>></span>
+					<div class="btn btnright"><i class="iconfont">&#xe600;</i></div>
 				</div>
 				<div class="content_rightbottom">
-					<div class="content_m_mtop_head">
-						<span>版面目录</span>
+					<div class="content_m_mright_head">
+						<div class="content_m_mright_mtitle">
+							<span class="text7">版面目录</span>
+						</div>
 					</div>
+					<div class="content_m_mright_img">
 					<ul>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
-						<li><a href="">监考老师敬爱的快乐撒娇的快乐奥斯卡</a></li>
+						<li><a href=""><span class="text10">1</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li> 
+						<li><a href=""><span class="text10">2</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">3</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">4</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">5</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">6</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">7</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
+						<li><a href=""><span class="text10">8</span>版<span class="text9">◆</span><span class="text8">肯定是浪费克里斯</span><br>快乐大大加快</a></li>
 					</ul>
+					</div>
 				</div>
 			</div>
 			<span>关于我们|投稿方式|版权声明</span>
