--- a/practise/index.html
+++ b/practise/index.html
@@ -24,8 +24,8 @@
 		.header .head_nav .head_nav_middle .text1{margin-left: 30px;line-height: 44px;}
 		.header .head_nav .head_nav_middle .text2{margin-left: 200px;line-height: 44px;margin-right: 265px;font-weight: normal;}
 
-		.content{width: 100%;height: 680px;margin-top: 44px;}
-		.content .content_middle{width: 1200px;padding: 0 100px;margin: 0 auto;box-sizing: border-box;height: 100%;}
+		.content{width: 100%;height: 758px;margin-top: 44px;}
+		.content .content_middle{width: 1200px;padding: 0 100px;margin: 0 auto;box-sizing: border-box;height: 100%;position: relative;}
 		.content .content_middle .content_m_left{width: 430px;height: 100%;padding: 1px;float: left;}
 		.content .content_middle .content_m_left .content_newspaper{width: 100%;height: 590px;box-shadow: 12px 0 22px 2px rgba(7,0,2,.31);margin-top: 16px;padding: 1px;background: white;}
 		.content .content_middle .content_m_left .content_newspaper img{display: block;margin: 0 auto;margin-top: 34px;}
@@ -62,7 +62,7 @@
 		.content .content_middle .content_m_right .content_rightbottom{width: 100%;height: 500px;border-radius: 10px;box-shadow:  10px 0 43px rgba(105,102,102,.53);margin-top: 22px;}
 		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head{height: 35px;width: 100%;background: #226cab;border-radius: 10px 10px 0px 0px/10px 10px 0px 0px;overflow: hidden;}
 		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_img{background: white;width: 100%;height: 476px;position: relative;top: -11px;display: block;border-radius: 10px;}
-		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head .content_m_mright_mtitle{height: 20px;width: 105px;background: white;border-radius: 10px 10px 0px 0px/10px 10px 0px 0px;margin-top:5px;margin-left: 7px;}
+		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head .content_m_mright_mtitle{height: 20px;width: 105px;background: white;border-radius: 5px 5px 0px 0px/5px 5px 0px 0px;margin-top:5px;margin-left: 7px;}
 		.content .content_middle .content_m_right .content_rightbottom .content_m_mright_head .content_m_mright_mtitle .text7{font-size: 15px;font-weight: bold;color: #226cab;margin-left: 23px;}
 		.content .content_middle .content_m_right .content_rightbottom ul{width: 100%;height: 476px;background: url(./img/practise_09.png) no-repeat bottom right;border-radius: 10px;}
 		.content .content_middle .content_m_right .content_rightbottom ul li:after{content: " ";display: block;width: 158px;height: 6px;background: #b2b2b2;position: relative;top: 0px;right: 0px;}
@@ -71,6 +71,12 @@
 		.content .content_middle .content_m_right .content_rightbottom ul li a .text8{font-size: 14px;text-decoration: underline;color: black;}
 		.content .content_middle .content_m_right .content_rightbottom ul li a .text9{font-size: 25px;color: black;}
 		.content .content_middle .content_m_right .content_rightbottom ul li a .text10{font-size: 23px;color: black;}
+		.content .content_middle .content_textfooter{width:1000px;height: auto;position: absolute;bottom: 0;text-align: center;line-height: 24px;letter-spacing: 5px;}
+
+		.footer{width: 100%;height: 130px;background: #226cab;margin-top: 20px;}
+		.footer .footer_middle{width: 1200px;height: 100%;padding: 0 100px;margin:  0 auto;box-sizing: border-box;letter-spacing: 3px;text-align: center;overflow: hidden;}
+		.footer .footer_middle span{font-size: 17px;margin-top: 40px;display: block;}
+		/*body{background: url(./img/practise_11.png) no-repeat top;background-size: 100% 400px;}*/
 	</style>
 </head>
 <body>
@@ -189,12 +195,12 @@
 					</div>
 				</div>
 			</div>
-			<span>关于我们|投稿方式|版权声明</span>
-			<span>主办单位：浙江油气公司党委</span>
+			<div class="content_textfooter">
+			关于我们|投稿方式|版权声明<br>主办单位：浙江油气公司党委</div>
 		</div>
 	</div>
 	<div class="footer">
-		<span>版权声明：刊发的所有作品，版权均属于浙江油田公司党委。未经书面授权，任何单位及个人不得将刊发的内容用于商业用。如进行转载、摘编，必须在书面授权范围内使用。</span>
+		<div class="footer_middle"><span>版权声明：刊发的所有作品，版权均属于浙江油田公司党委。未经书面授权，任何单位及个人不得将刊发的内容用于商业用。如进行转载、摘编，必须在书面授权范围内使用。</span></div>
 	</div>
 </body>
 </html>
