--- a/practise/index.html
+++ b/practise/index.html
@@ -12,12 +12,14 @@
 		*{padding: 0;margin: 0;}
 		li{list-style: none;}
 		a{text-decoration: none;}
+		html{background: #d4ebfd;}
+		body{background: url('img/practise_11.png') top no-repeat;background-size: 100% 500px;}
 		.header{width:100%;height: 112px;}
 		.header .head_middle{width: 1200px;padding: 0 100px;height: 100%;margin: 0 auto;box-sizing: border-box;}
 		.header .head_middle img{float: left;margin-top: 14px;}
 		.header .head_middle .head_search{width: 310px;height: 44px;float: right;margin-right: 20px;margin-top: 50px;}
 		.header .head_middle .head_search input{width: 255px;height: 100%;float: left;}
-		.header .head_middle .head_search .head_sear_logo{width: 51px;height: 100%;background: green;float: left;}
+		.header .head_middle .head_search .head_sear_logo{width: 51px;height: 48px;background: green;float: left;}
 		.header .head_nav{width: 100%;height: 44px;background: #1477ca;}
 		.header .head_nav .head_nav_middle{width: 1200px;height: 100%;margin: 0 auto;padding: 0 100px;box-sizing: border-box;}
 		.header .head_nav .head_nav_middle span{font-size: 17px;color: white;font-weight: bold;}
